changed positioning on iOS to fix link clicking bug, included bourbon

--- a/scss/birdseye.scss
+++ b/scss/birdseye.scss
@@ -1,11 +1,4 @@
-@mixin box-sizing ($box) {
-//  content-box | border-box | inherit
-  -webkit-box-sizing: $box;
-     -moz-box-sizing: $box;
-      -ms-box-sizing: $box;
-       -o-box-sizing: $box;
-          box-sizing: $box;
-}
+@import 'bourbon/bourbon';
 
 .birdseye {
   display: block;
